unpackaged/main/default/objects/Attandance__c/Attandance__c.object-meta.xml
<CustomObject>
    <label>Attandance</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>D.NO</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attandances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>