unpackaged/main/default/objects/Attandance__c/fields/Attandance__c.field-meta.xml
<CustomField>
    <fullName>Attandance__c</fullName>
    <label>Attandance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Precent</fullName>
            </value>
            <value>
                <fullName>Obsent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>