unpackaged/main/default/objects/Attandance__c/fields/Current_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Current Date</label>
    <type>Date</type>
</CustomField>