unpackaged/main/default/objects/Attandance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Current_Date__c</columns>
    <columns>Attandance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>